--- a/21/starbuzz/starbuzz.css
+++ b/21/starbuzz/starbuzz.css
@@ -19,6 +19,9 @@ body {
 }
 
 .sidebar {
+  position:  absolute;
+  top:          100px;
+	right:        200px;
   float:right;
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
