--- a/23/starbuzz/starbuzz.css
+++ b/23/starbuzz/starbuzz.css
@@ -15,22 +15,18 @@ body {
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 330px 10px 10px;
-  position: relative;
-	top:           0px;
-	left:       0px;
+  margin:           0px 10px 10px 10px;
+  display: table-cell;
+  vertical-align: top;
 }
 
 .sidebar {
- 
-   float:right; 
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
   padding:          15px;
   margin:           0px 10px 10px 10px;
-  width: 280px;
-  float: right;
-  z-index: 100;
+  display: table-cell;
+  vertical-align: top;
 }
 
 .footer {
@@ -40,7 +36,6 @@ body {
   padding:          15px;
   margin:           10px;
   font-size:        90%;
-  clear: right;
 }
 
 h1 {
@@ -66,12 +61,12 @@ a:visited {
   border-bottom:    thin dotted #675c47;
 }
 
-.allcontent {
-	width:               800px;
-	padding-top:           5px;
-	padding-bottom:        5px;
-	background-color:  #675c47;
-  margin-left:          auto;
-	margin-right:         auto;
+div.tableContainer {
+  display: table;
+  border-spacing: 10px;
 }
 
+div.talbeRow {
+  display: table-row;
+  border-spacing: 10px;
+}
