--- a/24/starbuzz.css
+++ b/24/starbuzz.css
@@ -11,15 +11,7 @@ body {
   height:           108px;
 }
 
-.award {
-	position: absolute;
-	top: 21px;
-	left: 70%;
-  transition: top 0.5s ease;
-}
-
-
-.main {
+#main {
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
   padding:          15px;
@@ -35,27 +27,6 @@ body {
   margin:           0px 10px 10px 10px;
   display: table-cell;
   vertical-align: top;
-}
-
-.drinks {
-    background-color: #efe5d0;
-    padding: 15px;
-    display: table-cell;
-  vertical-align: top;
-}
-
-.coupon {
-	position: fixed;
-	top: 350px;
-	left: -220px;
-  transition: left 0.5s ease;
-}
-
-.coupon a, img{
-	border: none;
-}
-.coupon:hover {
-	left: 0px; /* 悬停时移动到 0px 的位置 */
 }
 
 .footer {
@@ -98,4 +69,32 @@ div.tableContainer {
 div.talbeRow {
   display: table-row;
   border-spacing: 10px;
+}
+
+#drinks {
+    background-color: #efe5d0;
+    padding: 15px;
+    display: table-cell;
+    vertical-align: top;
+}
+
+.award{
+  position: absolute;
+  top:30px;
+  left:29.75%;
+}
+
+.coupon {
+	position: fixed;
+	top: 350px;
+	left: -210px;
+  transition: left 0.5s ease;
+}
+
+.coupon a, img{
+	border: none;
+}
+
+.coupon:hover{
+left: 0px;
 }
